# scoped-mapping

./: .gitignore  MANIFEST.in  Makefile  README.md.bak  README.rst  requirements.txt  setup.cfg  todo.txt
notebooks/: assemble_triad.ipynb  biosample_ebs_soil_packages_unclassified_taxa_sssom.tsv  biosample_ebs_water_packages_unclassified_taxa_sssom.tsv  envpack_slot_fractions.tsv  map_bare_list.ipynb  map_from_linkml_enums.ipynb  map_from_xsv_col.ipynb  marcin_mycoses.ipynb  onto_slots_by_env_pack.ipynb  scoped_mapping_of_biosamples.ipynb  scoped_mapping_of_biosamples_mixs.ipynb  scoped_mapping_of_biosamples_soil.ipynb  webmap_enums.yaml
notebooks/copied/: biosample_flag_unclassified.ipynb  biosample_orientation.ipynb  env_package_repair.ipynb  map_bare_list.ipynb  map_from_linkml_enums.ipynb  map_from_xsv_col.ipynb
notebooks/old/: biosample_ebs_soil_packages_unclassified_taxa_sssom.tsv  biosample_env_package_normalizastion.tsv  env_broad_scale_env_package_normalization.EnvPackage_plant-associated_SSSOM.tsv  env_local_scale_env_package_normalization.EnvPackage_plant-associated_SSSOM.tsv  env_medium_env_package_normalization.EnvPackage_plant-associated_SSSOM.tsv  env_medium_env_package_normalization.EnvPackage_soil_SSSOM.tsv  per_biosample_scoped_mapping_results.tsv  scoped_mapping_of_biosamples_soil.ipynb
scoped_mapping/: __init__.py
