[metadata]
name = scoped_mapping
description = Use orthogonal data to determine what ontologies should be used for mapping strings
long_description = file: README.rst
author = Mark A. Miller
author_email = mamillerpa@yahoo.com
url = https://github.com/turbomam/scoped-mapping
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    pandas
